# bssnrhs

./: CMakeLists.txt  README.md
include/: bssnrhstests.hpp  cli.hpp  defines.hpp  dendrogr_data.hpp  derivs.h  rhs_runner.hpp
include/rhsfuncs/: default_rhs.hpp  nothing_rhs.hpp  ssl_cahd_rhs.hpp
src/: bssnrhstests.cpp  derivs.cpp  main.cpp  rhs_runner.cpp
src/rhsfuncs/: default_rhs.cpp  nothing_rhs.cpp  ssl_cahd_rhs.cpp
